# sfa

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
fuzz/sfa/src/: main.rs
src/: lib.rs  tool.rs  writer.rs
src/toc/: mod.rs  reader.rs
src/tool/: tool_main.rs  tool_sanitize.rs
tests/: tool_tests.rs
