[package]
name = "sfa"
description = "A minimal, flat file archive encoding/decoding library"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
repository = "https://github.com/fjall-rs/sfa"
homepage = "https://github.com/fjall-rs/sfa"
keywords = ["file-archive"]
categories = ["filesystem"]
rust-version = "1.89"
publish = true

[lib]
name = "sfa"
path = "src/lib.rs"

[[bin]]
name = "sfa"
path = "src/tool.rs"
required-features = ["tool"]

[features]
default = []
tool = ["dep:clap", "dep:globset", "dep:parse-size", "dep:pretty-hex", "dep:path_jail"]

[dependencies]
byteorder = { package = "byteorder-lite", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"], optional = true }
globset = { version = "0.4.18", optional = true }
parse-size = { version = "1.0", optional = true }
pretty-hex = { version = "0.4", optional = true }
log = "0.4.21"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[target.'cfg(unix)'.dependencies]
path_jail = { version = "0.3.1", features = ["secure-open"], optional = true }

[target.'cfg(not(unix))'.dependencies]
path_jail = { version = "0.3.1", optional = true }

[dev-dependencies]
test-log = "0.2.16"
tempfile = "3.10.1"
assert_cmd = "2.0"
predicates = "3.0"
